# daedalux

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Dockerfile  LICENSE  README.md  ltl_learner.py  run_tests.py  trace_report_mutex_scarlet.trace  trace_report_trafficLight_scarlet.trace  trace_report_two_trafficLight_scarlet.trace
src/: CMakeLists.txt  main.cpp  main_cli.cpp
src/algorithm/: elementStack.cpp  elementStack.hpp  explore.cpp  explore.hpp  fsmExplorer.cpp  fsmExplorer.hpp  ltlModelChecker.cpp  ltlModelChecker.hpp  reachabilityRelation.cpp  reachabilityRelation.hpp  traceGenerator.cpp  traceGenerator.hpp
src/algorithm/utils/: bisimulationChecker.cpp  bisimulationChecker.hpp  stateComparer.cpp  stateComparer.hpp  successorTree.hpp  successorTreeComparison.hpp
src/cli/: modelchecking_subcommand.cpp  modelchecking_subcommand.hpp  mutant_subcommand.cpp  mutant_subcommand.hpp
src/core/ast/: astNode.cpp  astNode.hpp
src/core/ast/expr/: expr.cpp  expr.hpp
src/core/ast/stmnt/: stmnt.cpp  stmnt.hpp
src/core/ast/visitor/: astVisitor.hpp
src/core/automata/: astToFsm.cpp  astToFsm.hpp  fsm.cpp  fsm.hpp  fsmEdge.cpp  fsmEdge.hpp  fsmNode.cpp  fsmNode.hpp  fsmToAst.cpp  fsmToAst.hpp
src/core/logic/: ltl.cpp  ltl.hpp
src/core/semantic/: payload.cpp  payload.hpp  semantic.hpp
src/core/semantic/variable/: enumDef.hpp  enumVar.hpp  paramList.hpp  queueVar.cpp  queueVar.hpp  scalarVar.hpp  scalarVarInt.hpp  structVar.cpp  structVar.hpp  variable.cpp  variable.hpp
src/core/symbol/: symTable.cpp  symTable.hpp  symbol.cpp  symbol.hpp  symbols.hpp
src/core/symbol/visitor/: symTabVisitor.hpp
src/feature/: ADDutils.cpp  ADDutils.hpp  expToADD.cpp  expToADD.hpp  tvl.cpp  tvl.hpp
src/formulas/: formula.hpp  formulaCreator.cpp  formulaCreator.hpp  formulaSimplifier.hpp  formulaUtility.cpp  formulaUtility.hpp
src/formulas/predicates/: binaryPredicate.hpp  statePredicate.hpp  unaryPredicate.hpp  valuesPredicate.hpp
src/mutants/: modelAnalyzer.cpp  modelAnalyzer.hpp  mutantAnalyzer.cpp  mutantAnalyzer.hpp  spinRunner.cpp  spinRunner.hpp
src/promela/ast/expr/: argExpr.cpp  argExpr.hpp  binaryExpr.cpp  binaryExpr.hpp  constExpr.cpp  constExpr.hpp  temporalExpr.hpp  unaryExpr.cpp  unaryExpr.hpp  varExpr.cpp  varExpr.hpp
src/promela/ast/stmnt/: chanStmnt.cpp  chanStmnt.hpp  clockStmnt.hpp  decl.cpp  decl.hpp  flowStmnt.cpp  flowStmnt.hpp  logicDecl.cpp  logicDecl.hpp  stdlibStmnt.cpp  stdlibStmnt.hpp
src/promela/parser/: lex.yy.cpp  lexer.h  promela.l  promela.y  promela_loader.cpp  promela_loader.hpp  y.tab.cpp  y.tab.hpp
src/promela/semantic/variable/: channelVar.cpp  channelVar.hpp  mtypeVar.hpp  pidVar.cpp  pidVar.hpp
src/promela/symbol/logic/: temporalSymNode.cpp  temporalSymNode.hpp
src/promela/symbol/typedef/: inlineSymNode.hpp  mtypedefSymNode.cpp  mtypedefSymNode.hpp  (+2 more)
src/visualizer/: stateToGraphViz.cpp  stateToGraphViz.hpp  trace.cpp  trace.hpp  traceReport.cpp  traceReport.hpp
tests/: CMakeLists.txt  TestFilesUtils.hpp  test_ADDutils.cpp  test_elementStack.cpp  test_fsm.cpp  test_fsmEdge.cpp  test_fsmNode.cpp  test_main.cpp  test_promela_loader.cpp  test_specification_writer.cpp  test_state.cpp  test_transition.cpp
tests/formulas/: test_formula.cpp  test_formula_creator.cpp  test_ltl_creator.cpp  test_spinRunner.cpp
tests/integration_tests/: test_bisimulation.cpp  test_formula_creator.cpp  test_ltlmodelChecker.cpp  test_model_analyzer.cpp  test_most_similar_trans.cpp  test_mutant_handling.cpp  test_mutantgeneration.cpp  test_trace_generator.cpp
tests/models/csv/: csvtodtrace.py
tests/models/minepump/: minepump (copy).pml  original.pml  original_.pml
tests/semantic/: test_copy.cpp  test_executables.cpp  test_hash.cpp  test_similar.cpp  test_similar_mutant.cpp
tests/symbols/: test_bitSymNode.cpp  test_intSymNode.cpp  test_mtypeSymNode.cpp  test_symTable.cpp  test_symbol.cpp  test_temporalSymNode.cpp  test_varSymNode.cpp
tests/test_files/appendClaimTest/: flows_always_expected.pml  flows_liveness_expected.pml
tests/test_files/atomic/: atomic_if.pml
tests/test_files/basic/: array.pml  bar_at.pml  f_foo.pml  f_foo_at.pml  f_test.pml  f_test.tvl  flows.pml  foo.pml  foo@start.pml  foo_at.pml  foo_dot.pml  goto_atomic.pml.tmp  hello_world.pml  if_end.pml  mtypes.pml  never.pml  output.pml  sanity_check_1.pml  sanity_check_2.pml  sanity_check_3.pml  v_hello_world.pml
tests/test_files/features/: test1.pml  test3.pml  test5.pml
tests/test_files/ltl/: liveness_1.pml  liveness_2.pml  liveness_4.pml  ltl.pml  ltl_multi@.pml
tests/test_files/minepump/: first_prop.pml  original_product.pml  simp_minepump.pml  sniper_2.pml  test1.pml  test4.pml  test7.pml  test9.pml
tests/test_files/mtype/: test1.pml
tests/test_files/mutants/: array.txt  array_mutant.pml  array_mutant_alt.pml  array_mutant_never.pml  array_never.pml
tests/test_files/reachability/: test1_mutant.pml  test2.pml  test3.pml
tests/test_files/variants/: decl (another copy).pml  decl.pml  init.pml
tests/test_files/varref/: test1.pml
tests/test_files/warmingUp/: at_warming_up.pml  basic_warming_up.pml  f_ltl_multi@.pml  gen_warmingUp.py  hello_warming_up.pml  never_accept.pml  warmingUp_1000_2.pml  warmingUp_1000_2.tvl  warmingUp_100_2.tvl  warmingUp_10_6.pml  warmingUp_10_6.tvl  warmingUp_10_8.pml  warmingUp_11_11.pml  warmingUp_11_11.tvl  warmingUp_11_4.pml  warmingUp_11_8.pml  warmingUp_120_2.pml  warmingUp_120_4.pml  warmingUp_120_6.pml  warmingUp_120_8.pml  warmingUp_12_12.tvl  warmingUp_12_6.pml  warmingUp_14_14.pml  warmingUp_14_14.tvl  warmingUp_160_10.pml  warmingUp_160_2.pml  warmingUp_160_6.pml  warmingUp_160_8.pml  warmingUp_16_16.tvl  warmingUp_200_10.pml  warmingUp_200_19.pml  warmingUp_200_2.pml  warmingUp_200_4.pml  warmingUp_200_8.pml  warmingUp_2_6_2.pml  warmingUp_400_10.pml  warmingUp_400_2.pml  warmingUp_400_6.pml  warmingUp_400_8.pml  warmingUp_40_10.tvl  (+19 more)
tests/unit_tests/: test_state_comparer.cpp
tests/vizualizers/: test_stateToGraphViz.cpp  test_trace.cpp  test_traceReport.cpp
(+569 files in other folders)
